syntax = "proto3";
package consPKG;

service ConsignmentService {
    rpc CreateConsignment (Consignment) returns (Response) {}
    rpc GetConsignments (Request) returns (Response) {}
}

message Consignment {
    string id= 1;
    string description = 2;
    int32 weight = 3;
    repeated Container container = 4;
    string vessel_id = 5;
}

message Container {
    string id = 1;
    string origin = 2;
    string customer_id = 3;
    string user_id = 4;
}

message Response {
    bool Created = 1;
    Consignment consignment = 2;
    repeated Consignment  consignments = 3;
}

message Request {}
